--- a/index.html
+++ b/index.html
@@ -123,13 +123,32 @@ async function submitExam() {
     answers[currentIndex] = document.getElementById('answerBox').value;
     clearInterval(timerInterval);
 
-    // calculate correct/strengths/weaknesses (same as before)
-    
+    let correct = 0;
+    let strengths = new Set();
+    let weaknesses = new Set();
+
+    selectedQuestions.forEach((q,i)=>{
+        let ans = (answers[i]||'').toLowerCase();
+        let keywords = q.answer.toLowerCase().split(/[\s,.;]+/);
+        let matched = keywords.filter(k => k && ans.includes(k));
+        if(matched.length >= Math.max(1, Math.floor(keywords.length/2))){
+            correct++;
+            strengths.add(q.topic);
+        } else {
+            weaknesses.add(q.topic);
+        }
+    });
+
+    const total = selectedQuestions.length;
+    const percent = Math.round((correct/total)*100);
+    const status = percent>=80?'PASS':'FAIL';
+
+    // Create exam record
     const record = {examId, userName, userEmail, answers, status, percent};
 
-    // Send to serverless backend
+    // Send to GitHub via serverless endpoint
     try {
-        const res = await fetch("https://your-serverless-url/api/submitExam", {
+        const res = await fetch("https://YOUR-SERVERLESS-URL/api/submitExam", {
             method: "POST",
             headers: {"Content-Type":"application/json"},
             body: JSON.stringify(record)
@@ -137,7 +156,14 @@ async function submitExam() {
         const data = await res.json();
         console.log("Saved to GitHub:", data);
     } catch(err) {
-        console.error("Failed to save:", err);
+        console.error("Failed to save to GitHub:", err);
+        // Optional fallback: save to localStorage
+        let history = JSON.parse(localStorage.getItem('mockHistory')||'[]');
+        let serial = history.length + 1;
+        record.serial = serial;
+        history.push(record);
+        localStorage.setItem('mockHistory', JSON.stringify(history));
+        console.log("Saved locally instead");
     }
 
     renderResult(correct, total, percent, status, Array.from(strengths), Array.from(weaknesses));
@@ -180,4 +206,5 @@ renderRegister();
 </script>
 </body>
 </html>
+
 
