--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ async function submitExam() {
 
     // Send to GitHub via serverless endpoint
     try {
-        const res = await fetch("https://YOUR-SERVERLESS-URL/api/submitExam", {
+        const res = await fetch("https://github.com/datawithshah-dotcom/mockinterview/api/submitExam.js", {
             method: "POST",
             headers: {"Content-Type":"application/json"},
             body: JSON.stringify(record)
@@ -206,5 +206,6 @@ renderRegister();
 </script>
 </body>
 </html>
+
 
 
