--- a/index.html
+++ b/index.html
@@ -9,23 +9,17 @@
 body {margin:0; font-family:'Roboto',sans-serif; background:#1f1c2c; color:#fff;}
 .container {max-width:800px; margin:20px auto; padding:30px; border-radius:16px; background:#2c2a3a; box-shadow:0 10px 30px rgba(0,0,0,0.5);}
 h1,h2,h3{text-align:center;}
-.hidden{display:none;}
 .user-info{text-align:center; margin-bottom:20px; font-size:0.9em; color:#dcdcdc;}
 .user-info span{color:#ff6b6b; font-weight:500;}
 .timer{text-align:right; font-weight:700; color:#ff4d4d; margin-bottom:20px;}
 .question{margin-bottom:25px;}
 .question label{display:block; font-weight:500; margin-bottom:10px; font-size:1.1em; color:#fff;}
-.question textarea{width:100%; min-height:100px; padding:12px; border-radius:10px; border:none; resize:vertical; font-size:1em; background:#3a384c; color:#fff; outline:none;}
-.question textarea:focus{background:#4a4760; box-shadow:0 0 10px rgba(255,255,255,0.2);}
+.question textarea{width:100%; min-height:100px; padding:12px; border-radius:10px; border:none; resize:vertical; font-size:1em; background:#3a384c; color:#fff;}
 .btn{padding:12px 24px; margin:10px; font-size:1em; font-weight:600; border:none; border-radius:8px; cursor:pointer; transition:0.3s ease;}
 .btn-primary{background:#ff6b6b;color:#fff;}
 .btn-primary:hover{background:#ff4d4d;}
 .btn-secondary{background:#5bc0de;color:#fff;}
 .btn-secondary:hover{background:#31b0d5;}
-@media(max-width:600px){
-    .container{margin:10px; padding:20px;}
-    .question textarea{min-height:80px;}
-}
 </style>
 </head>
 <body>
@@ -39,11 +33,9 @@ let currentIndex = 0;
 let answers = {};
 let timerInterval;
 
-// Render Register Page
 function renderRegister(){
     document.getElementById("app").innerHTML = `
         <h1>Welcome to Mock Interview</h1>
-        <p style="text-align:center;">Enter your details to start</p>
         <form id="registerForm">
             <label>Name:</label>
             <input type="text" id="name" required style="width:100%;padding:10px;border-radius:8px;border:none;margin-bottom:10px;">
@@ -55,17 +47,11 @@ function renderRegister(){
     document.getElementById("registerForm").addEventListener('submit', startExam);
 }
 
-// Load questions from JSON
 async function loadQuestionsJSON(){
-    try{
-        const response = await fetch('questions.json');
-        questions = await response.json();
-    }catch(e){
-        alert("Failed to load questions.json");
-    }
+    const response = await fetch('questions.json');
+    questions = await response.json();
 }
 
-// Start Exam
 async function startExam(e){
     e.preventDefault();
     userName = document.getElementById('name').value;
@@ -79,59 +65,41 @@ async function startExam(e){
     startTimer(10*60);
 }
 
-// Render Question Page
-async function submitExam() {
-    answers[currentIndex] = document.getElementById('answerBox').value;
-    clearInterval(timerInterval);
-
-    let correct = 0;
-    let strengths = new Set();
-    let weaknesses = new Set();
-
-    selectedQuestions.forEach((q,i)=>{
-        let ans = (answers[i]||'').toLowerCase();
-        let keywords = q.answer.toLowerCase().split(/[\s,.;]+/);
-        let matched = keywords.filter(k => k && ans.includes(k));
-        if(matched.length >= Math.max(1, Math.floor(keywords.length/2))){
-            correct++;
-            strengths.add(q.topic);
-        } else {
-            weaknesses.add(q.topic);
-        }
-    });
-
-    const total = selectedQuestions.length;
-    const percent = Math.round((correct/total)*100);
-    const status = percent>=80?'PASS':'FAIL';
-
-    // Create exam record
-    const record = {examId, userName, userEmail, answers, status, percent};
-
-    // Send to GitHub via serverless endpoint
-    try {
-        const res = await fetch("https://YOUR-SERVERLESS-URL/api/submitExam", {
-            method: "POST",
-            headers: {"Content-Type":"application/json"},
-            body: JSON.stringify(record)
+function renderQuestion(){
+    const q = selectedQuestions[currentIndex];
+    document.getElementById("app").innerHTML = `
+        <h1>Random Mock Interview - PySpark</h1>
+        <div class="user-info">
+            Name: <span>${userName}</span> | Email: <span>${userEmail}</span> | Exam ID: <span>${examId}</span>
+        </div>
+        <div class="timer" id="timer">Time left: 10:00</div>
+        <div class="question">
+            <label>Q${currentIndex+1}/${selectedQuestions.length}. ${q.question}</label>
+            <textarea id="answerBox">${answers[currentIndex]||''}</textarea>
+        </div>
+        <div style="text-align:center;">
+            <button class="btn btn-secondary" id="backBtn" ${currentIndex===0?'style="display:none"':''}>Back</button>
+            ${currentIndex<selectedQuestions.length-1?`<button class="btn btn-secondary" id="nextBtn">Next</button>`:`<button class="btn btn-primary" id="submitBtn">Submit</button>`}
+        </div>
+    `;
+    if(currentIndex < selectedQuestions.length - 1){
+        document.getElementById('nextBtn').addEventListener('click', () => {
+            answers[currentIndex] = document.getElementById('answerBox').value;
+            currentIndex++;
+            renderQuestion();
         });
-        const data = await res.json();
-        console.log("Saved to GitHub:", data);
-    } catch(err) {
-        console.error("Failed to save to GitHub:", err);
-        // Optional fallback: save to localStorage
-        let history = JSON.parse(localStorage.getItem('mockHistory')||'[]');
-        let serial = history.length + 1;
-        record.serial = serial;
-        history.push(record);
-        localStorage.setItem('mockHistory', JSON.stringify(history));
-        console.log("Saved locally instead");
+    } else {
+        document.getElementById('submitBtn').addEventListener('click', submitExam);
     }
-
-    renderResult(correct, total, percent, status, Array.from(strengths), Array.from(weaknesses));
+    if(currentIndex>0){
+        document.getElementById('backBtn').addEventListener('click', ()=>{
+            answers[currentIndex] = document.getElementById('answerBox').value;
+            currentIndex--;
+            renderQuestion();
+        });
+    }
 }
 
-
-// Timer
 function startTimer(duration){
     let time=duration;
     clearInterval(timerInterval);
@@ -145,96 +113,28 @@ function startTimer(duration){
     },1000);
 }
 
-// Submit Exam with Keyword Matching
-async function submitExam() {
+async function submitExam(){
     answers[currentIndex] = document.getElementById('answerBox').value;
     clearInterval(timerInterval);
 
-    let correct = 0;
-    let strengths = new Set();
-    let weaknesses = new Set();
+    const record = { examId, userName, userEmail, answers, timestamp:new Date().toISOString() };
 
-    selectedQuestions.forEach((q,i)=>{
-        let ans = (answers[i]||'').toLowerCase();
-        let keywords = q.answer.toLowerCase().split(/[\s,.;]+/);
-        let matched = keywords.filter(k => k && ans.includes(k));
-        if(matched.length >= Math.max(1, Math.floor(keywords.length/2))){
-            correct++;
-            strengths.add(q.topic);
-        } else {
-            weaknesses.add(q.topic);
-        }
-    });
-
-    const total = selectedQuestions.length;
-    const percent = Math.round((correct/total)*100);
-    const status = percent>=80?'PASS':'FAIL';
-
-    // Create exam record
-    const record = {examId, userName, userEmail, answers, status, percent};
-
-    // Send to GitHub via serverless endpoint
     try {
-        const res = await fetch("https://api.github.com/datawithshah-dotcom/mockinterview/api/submitExam.js", {
+        const res = await fetch("/api/submitExam", {
             method: "POST",
             headers: {"Content-Type":"application/json"},
             body: JSON.stringify(record)
         });
         const data = await res.json();
         console.log("Saved to GitHub:", data);
-    } catch(err) {
-        console.error("Failed to save to GitHub:", err);
-        // Optional fallback: save to localStorage
-        let history = JSON.parse(localStorage.getItem('mockHistory')||'[]');
-        let serial = history.length + 1;
-        record.serial = serial;
-        history.push(record);
-        localStorage.setItem('mockHistory', JSON.stringify(history));
-        console.log("Saved locally instead");
+    } catch(err){
+        console.error("Error:", err);
     }
 
-    renderResult(correct, total, percent, status, Array.from(strengths), Array.from(weaknesses));
+    document.getElementById("app").innerHTML = `<h2>Thank you ${userName}! Your exam is submitted.</h2>`;
 }
 
-// Render Result
-function renderResult(score, total, percent, status, strengths, weaknesses){
-    document.getElementById("app").innerHTML = `
-    <div style="max-width: 600px; margin: 20px auto; padding: 20px; border-radius: 12px; 
-                box-shadow: 0 4px 15px rgba(0,0,0,0.1); font-family: 'Arial', sans-serif; 
-                background-color: #f9f9f9; color:#000;">
-      <h2 style="text-align: center; color: #333;">Mock Interview Questions- PySpark</h2>
-      <p style="text-align: center; font-size: 1.1em;">Hi <strong>${userName}</strong>,</p>
-      <div style="text-align: center; margin: 20px 0;">
-        <span style="font-size: 2em; font-weight: bold; color: ${status==="PASS" ? "#5cb85c" : "#d9534f"};">
-          ${score} / ${total} (${percent}%)
-        </span>
-        <p style="color: ${status==="PASS" ? "#5cb85c" : "#d9534f"}; font-weight: bold;">
-          ${status}
-        </p>
-      </div>
-      <div style="margin-top: 20px;">
-        <h3 style="color: #5bc0de;">Strengths (Topics you did well)</h3>
-        <ul style="padding-left: 20px; color: #333;">
-          ${strengths.length ? strengths.map(t=>`<li>${t}</li>`).join("") : "<li>-- None Yet --</li>"}
-        </ul>
-      </div>
-      <div style="margin-top: 20px;">
-        <h3 style="color: #f0ad4e;">Weaknesses (Topics to Improve)</h3>
-        <ul style="padding-left: 20px; color: #333;">
-          ${weaknesses.length ? weaknesses.map(t=>`<li>${t}</li>`).join("") : "<li>-- None Yet --</li>"}
-        </ul>
-      </div>
-    </div>
-    `;
-}
-
-// Initial load
 renderRegister();
 </script>
 </body>
 </html>
-
-
-
-
-
